# AliceV2

./: .cursorrules  .editorconfig  .env.test  .eslintrc.cjs  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierrc  AGENTS.md  ALICE_PRODUCTION_CHECKLIST.md  ALICE_SYSTEM_BLUEPRINT.md  ALICE_VNEXT_STEP1_CHECKLIST.md  CACHE.md  CHANGELOG.md  CODE_PURGE_PLAN.md  COMPLETE_ROADMAP_EXECUTION_PLAN.md  CONTRIBUTING.md  DAILY_STATUS.md  DAYTIME_CLAUDE_TASKS.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DPO_TRAINING_BREAKTHROUGH_2025-09-09.md  EVAL.md  FIBONACCI_BUILD_AND_TEST_GUIDE.md  FIBONACCI_SUCCESS_REPORT.md  FIBONACCI_TRANSFORMATION_PLAN.md  FORMATGUARD_BEFORE_AFTER.md  FRONTEND_DEVELOPMENT_GUIDE.md  GITHUB_SETUP.md  GPT_VS_REALITY_COMPARISON.md  LICENSE  LIVE_FIBONACCI_TEST_REPORT.md  LOOSE_THREADS.md  Makefile  OPTIMIZATION_MASTER_PLAN.md  OPUS_IMPLEMENTATION_SPEC.md  OPUS_STEP1_PROMPT.md  ORCHESTRATOR_TESTING_SUMMARY.md  OVERNIGHT_AUTO_STABILIZER.md  (+42 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
CLEANING/: README.md
config/: alerts.yml  prometheus.yml  retention_policy.yaml  security_policy.yaml  system_prompt.py  tool_fallback.json
configs/: train_mac.yaml
docs/: DEV_CONTROL.md  README.md  REPO_SETUP.md  REPO_STRUCTURE.md  STATUS_METRICS.md  debt_burndown.md  markdown_sync_plan.json
eval/: dashboard.html  harness.py  serve_report.py
eval_runs/: a-z_test.json  cache_key_optimized.json  cached_final.json  enhanced_routing.json  enum_json_final.json  enum_only_final.json  enum_only_micro.json  final_optimized.json  final_report.json  intent_guard_final.json  intent_guard_fixed.json  intent_guard_optimized.json  optimized_final.json  optimized_real.json  optimized_report.json  perfect_report.json  qwen25_3b_final.json  real_micro_enum.json  real_performance.json  reality_check.json  test_report.json  tool_selector_fixed.json
metrics/: fibonacci_metrics_20250906_152621.prom  fibonacci_training_history.csv
services/guardian/: Dockerfile  README.md  main.py  package.json  pyproject.toml
services/guardian/src/: guardian.py
services/guardian/src/api/: __init__.py  middleware.py  server.py
services/guardian/src/core/: __init__.py  brownout_manager.py  guardian.py  guardian_state.py  kill_sequence.py  metrics.py
(+580 files in other folders)
