[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]
exclude = ["venv", ".venv", "node_modules", "build", ".git"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false  # Gradual adoption
check_untyped_defs = true

# Exclude patterns
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
    ".mypy_cache/",
    "__pycache__/",
    "node_modules/",
]